--- a/package.json
+++ b/package.json
@@ -11,37 +11,48 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "1.1.0",
-    "@open-wa/wa-automate": "4.66.3",
+    "@open-wa/wa-automate": "^4.66.3",
     "@open-wa/wa-decrypt": "4.4.0",
-    "@vitalets/google-translate-api": "9.2.0",
+    "@vitalets/google-translate-api": "7.0.0",
     "acrcloud": "1.4.0",
-    "axios": "1.4.0",
-    "chalk": "5.2.0",
-    "cheerio": "1.0.0-rc.12",
-    "correios-brasil": "3.0.4",
-    "deepai": "1.0.21",
-    "dotenv": "16.1.3",
+    "axios": "^1.4.0",
+    "body-parse": "^0.1.0",
+    "chalk": "4.1.0",
+    "cheerio": "1.0.0-rc.10",
+    "correios-brasil": "2.1.2",
+    "cors": "^2.8.5",
+    "cross-fetch": "^3.1.6",
+    "debug": "^4.3.1",
+    "deepai": "1.0.17",
+    "dotenv": "^8.2.0",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "fbdl-core": "1.0.2",
     "fluent-ffmpeg": "2.1.2",
     "form-data": "4.0.0",
     "format-duration-time": "1.5.4",
-    "fs-extra": "11.1.1",
+    "fs-extra": "9.0.1",
     "g-i-s": "2.1.6",
-    "genius-lyrics": "4.4.3",
-    "google-it": "1.6.4",
-    "imgur": "2.3.0",
-    "instagram-url-direct": "1.0.13",
-    "moment-timezone": "0.5.43",
+    "genius-lyrics": "4.2.9",
+    "google-it": "1.6.2",
+    "hbs": "^4.2.0",
+    "imgur": "2.1.4",
+    "instagram-url-direct": "1.0.9",
+    "moment-timezone": "0.5.31",
+    "multer": "^1.4.5-lts.1",
     "nedb-async": "0.1.6",
+    "node-cron": "^3.0.2",
+    "node-fetch": "^3.3.1",
     "node-gtts": "2.0.2",
-    "openai": "^3.2.1",
-    "p-queue": "7.3.4",
-    "pretty-num": "0.5.2",
-    "prompt": "1.3.0",
+    "openai": "^3.1.0",
+    "p-queue": "6.6.2",
+    "pretty-num": "0.5.0",
+    "prompt": "1.1.0",
+    "puppeteer": "^20.5.0",
     "tiktok-scraper": "1.4.36",
-    "twitter-url-direct": "1.0.9",
-    "youtube-sr": "4.3.4",
-    "ytdl-core": "4.11.4"
+    "twitter-url-direct": "1.0.1",
+    "youtube-sr": "4.1.9",
+    "ytdl-core": "4.10.0"
   },
   "directories": {
     "lib": "lib"
