--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "acrcloud": "1.4.0",
     "axios": "^1.4.0",
     "body-parse": "^0.1.0",
+    "body-parser": "^1.20.2",
     "chalk": "4.1.0",
     "cheerio": "1.0.0-rc.10",
     "correios-brasil": "2.1.2",
@@ -50,6 +51,9 @@
     "pretty-num": "0.5.0",
     "prompt": "1.1.0",
     "puppeteer": "^20.5.0",
+    "redis": "^4.6.7",
+    "replicate": "^0.12.3",
+    "sqlite3": "^5.1.6",
     "tiktok-scraper": "1.4.36",
     "twitter-url-direct": "1.0.1",
     "wa-sticker-formatter": "^4.4.4",
