--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fs-extra": "9.0.1",
     "g-i-s": "2.1.6",
     "genius-lyrics": "4.2.9",
+    "google-it": "^1.6.4",
     "hbs": "^4.2.0",
     "imgur": "2.1.4",
     "instagram-url-direct": "1.0.9",
@@ -45,12 +46,14 @@
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1",
     "node-gtts": "2.0.2",
+    "node-simsimi": "^1.0.14",
     "openai": "^3.2.1",
     "p-queue": "6.6.2",
     "pretty-num": "0.5.0",
     "prompt": "1.1.0",
     "puppeteer": "^20.5.0",
     "replicate": "^0.12.3",
+    "simsimi": "^3.0.0",
     "sqlite3": "^5.1.6",
     "tiktok-scraper": "1.4.36",
     "twitter-url-direct": "1.0.1",
