Commit !top e correções

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@google-cloud/translate": "^7.2.1",
     "@open-wa/wa-automate": "^4.66.3",
     "@open-wa/wa-decrypt": "4.4.0",
-    "@vitalets/google-translate-api": "7.0.0",
+    "@vitalets/google-translate-api": "^9.2.0",
     "acrcloud": "1.4.0",
     "axios": "^1.4.0",
     "body-parse": "^0.1.0",
@@ -27,11 +27,12 @@
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.6",
     "debug": "^4.3.1",
-    "deepai": "1.0.17",
+    "deepai": "^1.0.21",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "fbdl-core": "1.0.2",
+    "fb-video-downloader": "^1.0.3",
+    "fbdl-core": "^0.0.1",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "2.1.2",
     "form-data": "4.0.0",
@@ -42,8 +43,9 @@
     "google-it": "^1.6.4",
     "hbs": "^4.2.0",
     "imgur": "2.1.4",
+    "instagram-private-api": "^1.45.3",
     "instagram-url-direct": "1.0.9",
-    "moment-timezone": "0.5.31",
+    "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
     "nedb-async": "0.1.6",
     "node-cron": "^3.0.2",
@@ -54,15 +56,17 @@
     "p-queue": "6.6.2",
     "pretty-num": "0.5.0",
     "prompt": "1.1.0",
-    "puppeteer": "^20.5.0",
+    "puppeteer": "^20.7.4",
     "replicate": "^0.12.3",
+    "rimraf": "^5.0.1",
     "simsimi": "^3.0.0",
+    "social_media_downloader": "^1.0.6",
     "sqlite3": "^5.1.6",
     "tiktok-scraper": "1.4.36",
     "twitter-url-direct": "1.0.1",
     "wa-sticker-formatter": "^4.4.4",
     "youtube-sr": "4.1.9",
-    "ytdl-core": "4.10.0"
+    "ytdl-core": "^4.11.4"
   },
   "directories": {
     "lib": "lib"
